Fix for image viewer template cutting off loaded transitions due to overflow hidden.

--- a/src/templates/image-viewer/css/image-viewer.css
+++ b/src/templates/image-viewer/css/image-viewer.css
@@ -18,12 +18,10 @@
 	position: relative;
 	display: inline-block;
 	max-width: 100%;
-	overflow: hidden;
 	z-index: 6;
 }
 .fiv-inner .fiv-inner-container {
 	position: relative;
-	overflow: hidden;
 	max-width: 100%;
 	border-style: solid;
 	border-width: 0;
